<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientgold"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/jdl1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/a"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/nol" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/nol" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/setNisob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/nol" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/nol" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/nol" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/nol" >

        <requestFocus />
    </EditText>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp" >

        <Button
            android:id="@+id/hitung"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/hzakat" />

    </TableLayout>


</LinearLayout>
